--- a/templates/base.html
+++ b/templates/base.html
@@ -47,10 +47,7 @@
                             <a href="">Blog</a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="">About Us</a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="">Contact Us</a>
+                            <a href="{% url 'about_us' %}">About Us</a>
                         </li>
 
                         <li class="list-inline-item">
