--- a/templates/base.html
+++ b/templates/base.html
@@ -41,10 +41,10 @@
                             <a href="{% url 'shop' %}">Shop</a>
                         </li>
                         <li class="list-inline-item d-none d-lg-inline-block">
-                            <a href="">The Brews Reviews!</a>
+                            <a href="{% url 'blog' %}">The Brews Reviews!</a>
                         </li>
                         <li class="list-inline-item d-lg-none">
-                            <a href="">Blog</a>
+                            <a href="{% url 'blog' %}">Blog</a>
                         </li>
                         <li class="list-inline-item">
                             <a href="{% url 'about_us' %}">About Us</a>
