Content block now wrapped in a main element

--- a/templates/base.html
+++ b/templates/base.html
@@ -96,8 +96,10 @@
             </div>
         {% endif %}
 
-        {% block content %}
-        {% endblock content %}
+        <main>
+            {% block content %}
+            {% endblock content %}
+        </main>
         <!-- Scripts: -->
         <!-- J-Query -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
