--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -2,58 +2,81 @@
 {% load static %}
 
 {% block content %}
-<h1>About Us</h1>
+    <h1>About Us</h1>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12 col-md-4">
-            <h4>Contact</h4>
-            <p>Our Facebook page link can be found <a href=""></a>here.</p>
-        </div>
-        <div class="col-12 col-md-8 col-lg-4">
-            <h4><strong>Well hello, good visitor of my website!</strong></h4>
-            <p>
-                I'll start by introducing myself. My name is Alistair Palistair,
-                Alistair McPalistair, Ally Pal, Alistair P, Ally Pally, AP, Big AP, THE Big AP, or usually <strong>Ally P</strong>.
-                Call me what you will! I'm a tea seller in Leeds who is very enthusiastic about his work.
-                Tea is something I wouldn't call a hobby but more a spiritual connection and I don't mess about
-                in terms of making sure my customers only drink the best stuff. It's too important!
-                Although I am based in Leeds, West Yorkshire I do sell my products worldwide.
-                Excellent tea must be accessible to all! And you best believe mine are certifiably banging. Get ready for a good time!
-                If you still don't believe the hype you can read more info on each of my teas that I post <a href="{% url 'blog' %}"><strong>on my blog.</strong></a>
-                Other ways to find out about our antics here you can subscribe to emails below if you always want to find out the hot news!
-            </p>
-        </div>
-        <div class="col-12 col-lg-4">
-            <h4>FAQs</h4>
-            <div class="row">
-                <div class="col-12">
-                    <p><strong>What's the deal with shipping costs?</strong> <span>If you live in the UK, shipping costs £3 per order.
-                        In Europe, it will be £7 (I've counted Azerbaijan as Europe because I'm nice) and for the rest of the world
-                        it's £15.</span></p>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-8 col-lg-4 order-md-1 order-lg-2">
+                <h4 class="text-center">
+                    <strong>Well hello, good visitor of my website!</strong>
+                </h4>
+                <p>
+                    I'll start by introducing myself. My name is Alistair Palistair,
+                    Alistair McPalistair, Ally Pal, Alistair P, Ally Pally, AP, Big AP, THE Big AP, or usually <strong>Ally P</strong>.
+                    Call me what you will! I'm a tea seller in Leeds who is very enthusiastic about his work.
+                    Tea is something I wouldn't call a hobby but more a spiritual connection and I don't mess about
+                    in terms of making sure my customers only drink the best stuff. It's too important!
+                    Although I am based in Leeds, West Yorkshire I do sell my products worldwide.
+                    Excellent tea must be accessible to all! And you best believe mine are certifiably banging. Get ready for a good time!
+                    If you still don't believe the hype you can read more info on each of my teas that I post <a href="{% url 'blog' %}"><strong>on my blog.</strong></a>
+                    Other ways to find out about our antics here you can subscribe to emails below if you always want to find out the hot news!
+                </p>
+            </div>
+
+            <div class="col-12 col-md-4 col-lg-4 order-md-2 order-lg-1">
+                <h4 class="text-center">Contact:</h4>
+                <p>
+                    Our Facebook page link can be found
+                    <a href="https://facebook.com"
+                       target="_blank"
+                       rel="noopener"
+                       aria-label="Visit our Facebook page">here!</a>
+                </p>
+                <p>
+                    More questions about any of our teas? Do you want to work for me? Send me some fan mail? Slide into my DMs? For any and all enquiries please fill out the contact form below!
+                </p>
+            </div>
+
+            <div class="col-12 col-lg-4 order-md-3 order-lg-3">
+                <h4 class="text-center">FAQs</h4>
+                <div class="row">
+                    <div class="col-12">
+                        <p>
+                            <strong>What's the deal with shipping costs?</strong> <span>If you live in the UK, shipping costs £3 per order.
+                                In Europe, it will be £7 (I've counted countries in between such as Azerbaijan as Europe because I'm nice) and for the rest of the world
+                            it's £15.</span>
+                        </p>
+                    </div>
+                    <div class="col-12">
+                        <p>
+                            <strong>How long will shipping take?</strong> <span>For the UK I use the Royal Mail 48 hour delivery service so
+                                it should get to you in two business days. European deliveries should take one week or 5-7 business
+                            days and for the rest of the world it should take 2-3 weeks!</span>
+                        </p>
+                    </div>
+                    <div class="col-12">
+                        <p>
+                            <strong>How much tea can I order at a time?</strong> <span>Well you can make the order as big as you want!
+                                I do however have a quantity system implemented for individual teas.
+                                The minimum amount you can order and pay for a product is 30g. This will come with its base price
+                                but you can also order any tea in quantities of 100g or if you really love it then 300g packets also.
+                                You will get the 100g at the price of 90g when compared to the base price and for the 300g it will be
+                            like you're paying for 240g so it definitely works out to buy more of your favourite!</span>
+                        </p>
+                    </div>
+                    <div class="col-12">
+                        <p>
+                            <strong>But what if I want to try a cheeky bit of a different tea? There are so many to choose from!</strong> <span>Well dear visitor!
+                                It just so happens that I, like a lot of other tea companies, actually do love to send a lil bit of extra summin summin to my faithful customers.
+                                I have even taken it an extra bit of the way and give you an option of choosing an extra 5g from a choice of
+                                products that aren't in your order, free of charge! The options will display when you're in the bag area.
+                                There is also, if you've ordered one of everything, the chance to pick up an extra 20g of our Breakfast Blend
+                            tea for you to enjoy. I just really enjoy rewarding my customers!</span>
+                        </div>
+                    </p>
                 </div>
-                <div class="col-12">
-                    <p><strong>How long will shipping take?</strong> <span>For the UK I use the Royal Mail 48 hour delivery service so
-                        it should get to you in two business days. European deliveries should take one week or 5-7 business
-                        days and for the rest of the world it should take 2-3 weeks!</span></p>
-                </div>
-                <div class="col-12">
-                    <p><strong>How much tea can I order at a time?</strong> <span>Well you can make the order as big as you want!
-                        I do however have a quantity system implemented for individual teas.
-                        The minimum amount you can order and pay for a product is 30g. This will come with it's base price
-                        but you can also order any tea in quantities of 100g or if you really love it then 300g packets also.
-                        You will get the 100g at the price of 90g when compared to the base price and for the 300g it will be
-                        like you're paying for 240g so it definitely works out to buy more of your favourite!</span></p>
-                </div>
-                <div class="col-12"><strong>But what if I want to try a cheeky bit of a different tea? There are so many to choose from!</strong><span>Well dear visitor!
-                    It just so happens that I, like a lot of other tea companies actually do love to send a lil bit of extra summin summin to my faithful customers.
-                    I have even taken it an extra bit of the way and give you an option of choosing an extra 5g from a choice of
-                    products that aren't in your order, free of charge! The options will display when you're in the bag area.
-                    There is also, if you've ordered one of everything, the chance to pick up and extra 20g of our Breakfast Blend
-                    tea for you to enjoy. I just really enjoy rewarding my customers!</span></div>
             </div>
         </div>
     </div>
-</div>
 
 {% endblock content %}
