--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -35,6 +35,10 @@
                 <p>
                     More questions about any of our teas? Do you want to work for me? Send me some fan mail? Slide into my DMs? For any and all enquiries please fill out the contact form below!
                 </p>
+                <form action="{% url 'about_us' %}">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                </form>
             </div>
 
             <div class="col-12 col-lg-4 order-md-3 order-lg-3">
