--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -1,18 +1,43 @@
 {% extends "base.html" %}
-<div class="homepage-overlay d-flex justify-content-center">
-  <h2>Welcome...</h2>
-  <h2>To Ally P's Luxury Teas Leeds!</h2>
-  <h1>We Deliver Worldwide!</h1>
+{% load static %}
 
-  <ul>
-    <li><a href="{% url 'shop' %}">Shop</a></li>
-    <li><a href="">The Brews Reviews!</a></li>
-    <li><a href="">About Us</a></li>
-    <li><a href="">Contact Us</a></li>
-    {% if request.user.is_authenticated %}
-    <li><a href="{% url 'profile' %}">Your account</a></li>
-    {% else %}
-    <li><a href="{% url 'account_signup' %}">Sign-in/Register</a></li>
-    {% endif %}
-  </ul>
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'welcome/css/welcome.css' %}">
+{% endblock extra_css %}
+
+{% block content %}
+<div class="container-fluid welcome-delivery-banner mt-0">
+	<div class="row">
+		<div class="col-12 text-center">
+			<h1>We Deliver Worldwide!</h1>
+		</div>
+	</div>
 </div>
+
+    <div
+         class="homepage-overlay d-flex justify-content-center">
+        <h2>Welcome...</h2>
+        <h2>To Ally P's Luxury Teas Leeds!</h2>
+
+        <ul>
+            <li>
+                <a href="{% url 'shop' %}">Shop</a>
+            </li>
+            <li>
+                <a href="{% url 'blog' %}">The Brews Reviews!</a>
+            </li>
+            <li>
+                <a href="{% url 'about_us' %}">About Us</a>
+            </li>
+            {% if request.user.is_authenticated %}
+                <li>
+                    <a href="{% url 'profile' %}">Your account</a>
+                </li>
+            {% else %}
+                <li>
+                    <a href="{% url 'account_signup' %}">Sign-in/Register</a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
+{% endblock content %}
