--- a/welcome/static/welcome/css/welcome.css
+++ b/welcome/static/welcome/css/welcome.css
@@ -1,15 +1,17 @@
-body {
+body, html {
     margin: 0;
     padding: 0;
     height: 100%;
+    font-family: Roboto, Helvetica;
 }
 
 /* For the banner at the top */
 .welcome-delivery-banner {
-    background-color: #3CA400;
+    background-color: #00974b;
     color: white;
     z-index: 1001 !important;
-    position: relative;
+    position: absolute;
+    top: 0;
 }
 
 /* Class for welcome page overlay screen */
@@ -23,7 +25,7 @@ body {
     left: 0;
     color: black;
     position: fixed;
-    background: #2f4858;
+    background: #c8f8ff;
     z-index: 100;
 }
 
