Add: 404 and 500 handler views and templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,10 @@
               content="Leeds tea merchant, Leeds tea store, northern tea seller UK, tea merchant Yorkshire, tea blends Leeds, tea merchant UK, loose leaf tea Leeds, tea supplies Leeds">
         <script src="https://kit.fontawesome.com/bc5efad812.js"
                 crossorigin="anonymous"></script>
+        <!-- Google font-delius -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
         <!-- Bootstrap 4 -->
         <link rel="stylesheet"
               href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" />
