--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,3 +10,11 @@ h1 {
 .heavier-font {
     font-weight: 600;
 }
+
+
+/* Google font-delius */
+.delius-regular {
+    font-family: "Delius", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
