Fix up 404 and 500 templates

--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -5,10 +5,13 @@
 {% block content %}
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
+            <div class="col-12 my-auto">
                 <h1 class="display-4 logo-font text-black">
-                    The page you are looking for isn't available
+                    404
                 </h1>
+                <div class="text-center display-3">
+                    <p>The page you are looking for isn't available</p>
+                </div>
                 <div class="my-5">
                     <h4>
                         <a href="{% url 'shop' %}"
