--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
               content="Leeds tea merchant, Leeds tea store, northern tea seller UK, tea merchant Yorkshire, tea blends Leeds, tea merchant UK, loose leaf tea Leeds, tea supplies Leeds">
         <script src="https://kit.fontawesome.com/bc5efad812.js"
                 crossorigin="anonymous"></script>
+
+        <link rel="icon" href="https://img.icons8.com/?size=100&id=66650&format=png&color=000000" type="image/png">
         <!-- Google font-delius -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
