--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -5,10 +5,13 @@
 {% block content %}
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
+            <div class="col-12 my-auto">
                 <h1 class="display-4 logo-font text-black">
-                    We are having server errors when trying to access this page.
+                    Error Code: 505
                 </h1>
+                <div class="my-5">
+                    <p>We are having server errors when trying to access this page.</p>
+                </div>
                 <div class="my-5">
                     <h4>
                         <a href="{% url 'shop' %}"
