Add: Terms and conitions link

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -76,8 +76,11 @@
                                 products that aren't in your order, free of charge! The options will display when you're in the bag area.
                                 There is also, if you've ordered one of everything, the chance to pick up an extra 20g of our Breakfast Blend
                             tea for you to enjoy. I just really enjoy rewarding my customers!</span>
-                        </div>
-                    </p>
+                        </p>
+                    </div>
+                    <div class="col-12">
+                        <a href="https://www.termsfeed.com/live/ec1f74d6-bb05-414c-9065-7c3e8df910e6">Click here to see our terms and conditions</a>
+                    </div>
                 </div>
             </div>
         </div>
