--- a/templates/base.html
+++ b/templates/base.html
@@ -58,74 +58,70 @@
                             <a href="{% url 'about_us' %}">About Us</a>
                         </li>
 
-                        <li class="list-inline-item">
-                            {% if request.user.is_superuser %}
-                                <li class="list-inline-item">
-                                    <a href="{% url 'superuser_admin_page' %}">Go to the superuser admin</a>
-                                </li>
-                            {% elif request.user.is_authenticated %}
-                                <li class="list-inline-item dropdown">
-                                    <a class="nav-link dropdown-toggle"
-                                       href="#"
-                                       id="accountDropdown"
-                                       role="button"
-                                       data-toggle="dropdown"
-                                       aria-expanded="false">Account</a>
-                                    <div class="dropdown-menu dropdown-menu-right"
-                                         aria-labelledby="accountDropdown">
-                                        <a class="dropdown-item" href="{% url 'profile' %}">View Profile</a>
-                                        <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
-                                    </div>
-                                </li>
-
-                            {% else %}
-                                <a href="{% url 'account_signup' %}">Sign-in/Register</a>
-                            {% endif %}
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="{% url 'view_bag' %}"><i class="fas fa-shopping-bag fa-lg"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-
-        {% if messages %}
-            <div class="message-container">
-                {% for message in messages %}
-                    {% with message.level as level %}
-                        {% if level == 40 %}
-                            {% include "includes/toasts/toast_error.html" %}
-                        {% elif level == 30 %}
-                            {% include "includes/toasts/toast_warning.html" %}
-                        {% elif level == 25 %}
-                            {% include "includes/toasts/toast_success.html" %}
+                        {% if request.user.is_authenticated %}
+                            <li class="list-inline-item dropdown">
+                                <a class="nav-link dropdown-toggle"
+                                   href="#"
+                                   id="accountDropdown"
+                                   role="button"
+                                   data-toggle="dropdown"
+                                   aria-expanded="false">Account</a>
+                                <div class="dropdown-menu dropdown-menu-right"
+                                     aria-labelledby="accountDropdown">
+                                    <a class="dropdown-item" href="{% url 'profile' %}">View Profile</a>
+                                    <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
+                                </div>
+                            </li>
                         {% else %}
-                            {% include "includes/toasts/toast_info.html" %}
+                            <li class="list-inline-item">
+                                <a href="{% url 'account_signup' %}">Sign-in/Register</a>
+                            </li>
                         {% endif %}
-                    {% endwith %}
-                {% endfor %}
-            </div>
-        {% endif %}
 
-        <main>
-            {% block content %}
-            {% endblock content %}
-        </main>
-        <!-- Scripts: -->
-        <!-- J-Query -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <!-- Bootstrap 4.6 JS -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Stripe -->
-        <script src="https://js.stripe.com/v3/"></script>
-        <!-- Extra custom JS -->
-        {% block extra_js %}
-            <script type="text/javascript">
+                    <li class="list-inline-item">
+                        <a href="{% url 'view_bag' %}"><i class="fas fa-shopping-bag fa-lg"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    {% if messages %}
+        <div class="message-container">
+            {% for message in messages %}
+                {% with message.level as level %}
+                    {% if level == 40 %}
+                        {% include "includes/toasts/toast_error.html" %}
+                    {% elif level == 30 %}
+                        {% include "includes/toasts/toast_warning.html" %}
+                    {% elif level == 25 %}
+                        {% include "includes/toasts/toast_success.html" %}
+                    {% else %}
+                        {% include "includes/toasts/toast_info.html" %}
+                    {% endif %}
+                {% endwith %}
+            {% endfor %}
+        </div>
+    {% endif %}
+
+    <main>
+        {% block content %}
+        {% endblock content %}
+    </main>
+    <!-- Scripts: -->
+    <!-- J-Query -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Bootstrap 4.6 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
+    <!-- Extra custom JS -->
+    {% block extra_js %}
+        <script type="text/javascript">
             $(document).ready(function() {
             $(".toast").toast("show");
         });
-            </script>
-        {% endblock extra_js %}
-    </body>
+        </script>
+    {% endblock extra_js %}
+</body>
 </html>
