--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -42,7 +42,8 @@
                                             <li class="list-inline-item">
                                                 <a href="{% url 'superuser_admin_page' %}">Go to the superuser admin</a>
                                             </li>
-                                        {% elif request.user.is_authenticated %}
+                                        {% endif %}
+                                        {% if request.user.is_authenticated %}
                                             <li class="list-inline-item">
                                                 <a href="{% url 'profile' %}">Your account</a>
                                             </li>
