Add: Edit BlogPost functionality

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -79,7 +79,7 @@
                         </p>
                     </div>
                     <div class="col-12">
-                        <a href="https://www.termsfeed.com/live/ec1f74d6-bb05-414c-9065-7c3e8df910e6">Click here to see our terms and conditions</a>
+                        <a target="_blank" href="https://www.termsfeed.com/live/ec1f74d6-bb05-414c-9065-7c3e8df910e6">Click here to see our privacy policy!</a>
                     </div>
                 </div>
             </div>
