--- a/profiles/templates/profiles/edit_form.html
+++ b/profiles/templates/profiles/edit_form.html
@@ -21,7 +21,7 @@
                                {% if user_profile.subscribed_to_email %}checked{% endif %}>
                         <label class="form-check-label" for="id_subscribed_to_email">Subscribe to emails</label>
                     </div>
-                    <button class="btn btn-black rounded-0 float-left">Update Information</button>
+                    <button type="submit" class="btn btn-black rounded-0 float-left">Update Information</button>
                 </form>
             </div>
 			<div class="col-12 col-md-2 col-lg-4">
