--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -2,29 +2,40 @@
 {% load static %}
 
 {% block content %}
-    <h1>Your Account</h1>
+    <h1>Account Info of {{ user.username }}</h1>
 
     <div class="container">
         <div class="row mt-3">
             <div class="col-12 col-md-6 text-left">
                 <h3 class="text-md-center">Order History:</h3>
-                {% for order in orders %}
-                    <div>
-                        <a href="{% url 'view_order' order_number=order.order_number %}">{{ order.order_number }}</a>
+                <div class="row">
+                    <div class="col-12">
+                        <div id="orders-div">
+                            {% for order in orders %}
+                                <p class="display-order">
+                                    <a href="{% url 'view_order' order_number=order.order_number %}">{{ order.order_number }}</a>
+                                </p>
+                            {% endfor %}
+                        </div>
                     </div>
-                {% endfor %}
+                </div>
+
             </div>
             <div class="col-12 col-md-6 text-right">
                 <h3 class="text-md-center">Your Information:</h3>
                 <div id="info-div">
                     {% if user.user_profile.full_name %}<p class="display-info">{{ user.user_profile.full_name }}</p>{% endif %}
                     {% if user.user_profile.email %}<p class="display-info">{{ user.user_profile.email }}</p>{% endif %}
-                    {% if user.user_profile.subscribed_to_email %}<p class="display-info">You are currently subscribed to our email marketing service.</p>{% endif %}
+                    {% if user.user_profile.subscribed_to_email %}
+                        <p class="display-info">You are currently subscribed to our email marketing service.</p>
+                    {% endif %}
                     {% if user.user_profile.phone_number %}<p class="display-info">{{ user.user_profile.phone_number }}</p>{% endif %}
                     {% if user.user_profile.address_line1 %}<p class="display-info">{{ user.user_profile.address_line1 }}</p>{% endif %}
                     {% if user.user_profile.address_line2 %}<p class="display-info">{{ user.user_profile.address_line2 }}</p>{% endif %}
                     {% if user.user_profile.town_or_city %}<p class="display-info">{{ user.user_profile.town_or_city }}</p>{% endif %}
-                    {% if user.user_profile.state_or_region %}<p class="display-info">{{ user.user_profile.state_or_region }}</p>{% endif %}
+                    {% if user.user_profile.state_or_region %}
+                        <p class="display-info">{{ user.user_profile.state_or_region }}</p>
+                    {% endif %}
                     {% if user.user_profile.postal_code %}<p class="display-info">{{ user.user_profile.postal_code }}</p>{% endif %}
                     {% if user.user_profile.country %}<p class="display-info">{{ user.user_profile.country }}</p>{% endif %}
                 </div>
@@ -34,3 +45,7 @@
     </div>
 
 {% endblock content %}
+
+{% block extra_js %}
+    <script src="{% static 'profiles/js/display_info.js' %}"></script>
+{% endblock extra_js %}
