--- a/brewsreviews/templates/brewsreviews/blog_post.html
+++ b/brewsreviews/templates/brewsreviews/blog_post.html
@@ -2,13 +2,13 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-12 col-lg-6">
-            
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-6 mx-auto">
+                <h1>{{ post.title }}</h1>
+                <p>{{ post.content }}</p>
+            </div>
         </div>
     </div>
-</div>
-<h1>{{ post.title }}</h1>
-<p>{{ post.content }}</p>
+
 {% endblock content %}
