--- a/brewsreviews/templates/brewsreviews/main_blog_page.html
+++ b/brewsreviews/templates/brewsreviews/main_blog_page.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-12 text-lg-center text-md-left text-sm-left text-xs-left">
                 {% for post in blog_posts %}
-                    <a href="{% url 'blog_post' pk=post.pk %}"><h2>{{ post.title }}</h2></a>
+                    <a aria-label="Go to individual blog post" href="{% url 'blog_post' pk=post.pk %}"><h2>{{ post.title }}</h2></a>
                     <p>{{ post.content|truncatechars:90 }}</p>
                 {% endfor %}
             </div>
