--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -29,7 +29,7 @@
                 {% for item in bag_items %}
                     <div class="row">
                         <div class="col-2 mb-1">
-                            <a href="{% url 'product_detail' sku=item.product.sku %}">
+                            <a aria-label="View product page" href="{% url 'product_detail' sku=item.product.sku %}">
                                 <img class="border rounded mr-3"
                                      width="100px"
                                      height="auto"
@@ -60,7 +60,7 @@
             </div>
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Please fill out the delivery form:</p>
-                <form action="{% url 'checkout' %}" method="post" id="payment-form">
+                <form action="{% url 'checkout' %}" method="post" id="payment-form" aria-label="Payment details form">
                     {% csrf_token %}
                     <fieldset class="rounded px-3 mb-5">
                         <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
@@ -112,7 +112,7 @@
                                class="form-check-input ml-2 mr-0">
                     </fieldset>
                     <div class="submit-button text-right mt-5 mb-2">
-                        <a href="{% url 'view_bag' %}" class="btn btn-outline-black rounded-0">
+                        <a aria-label="Back to bag" href="{% url 'view_bag' %}" class="btn btn-outline-black rounded-0">
                             <span class="icon">
                                 <i class="fas fa-chevron-left"></i>
                             </span>
