--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -22,7 +22,7 @@
                 </p>
             </div>
         </div>
-
+        <!-- taken and adapted from Code Institute's Boutique Ado walkthrough -->
         <div class="row">
             <div class="col-12 col-lg-7">
                 <div class="order-confirmation-wrapper p-2 border">
@@ -101,13 +101,13 @@
                         </div>
                     {% else %}
                         <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold">Address:</p>
+                            <div class="col-12 col-md-4">
+                                <p class="mb-0 text-black font-weight-bold">Address:</p>
+                            </div>
+                            <div class="col-12 col-md-8 text-md-right">
+                                <p class="mb-0">{{ order.address_line1 }}</p>
+                            </div>
                         </div>
-                        <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.address_line1 }}</p>
-                        </div>
-                    </div>
                     {% endif %}
 
                     {% if order.state_or_region %}
@@ -198,22 +198,12 @@
         </div>
         <div class="row">
             <div class="col-12 col-lg-7 text-right">
-                {% if from_profile %}
-                    <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
-                        <span class="icon mr-2">
-                            <i class="fas fa-angle-left"></i>
-                        </span>
-                        <span class="text-uppercase">Go to Your Profile</span>
-                    </a>
-                {% else %}
-                    <a href="{% url 'shop' %}"
-                       class="btn btn-black rounded-0 my-2">
-                        <span class="icon mr-2">
-                            <i class="fas fa-gifts"></i>
-                        </span>
-                        <span class="text-uppercase">Back to the Shop</span>
-                    </a>
-                {% endif %}
+                <a href="{% url 'shop' %}" class="btn btn-black rounded-0 my-2" aria-label="Go back to shop">
+                    <span class="icon mr-2">
+                        <i class="fas fa-gifts"></i>
+                    </span>
+                    <span class="text-uppercase">Back to the Shop</span>
+                </a>
             </div>
         </div>
     </div>
